syntax = "proto3";

option go_package = "fengziren.top/grpc_demo/app/helloworld/api/pb/v1";
// The greeting service definition.
service HelloWorldService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
    // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./app/helloworld/api/pb/v1/helloworld.proto